--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello, Html</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/screen.css" />
-  </head>
-  <body>
-    <h1 class="hello-world">Hello, World!</h1>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hello, Html</title>
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="/screen.css" />
+</head>
+
+<body>
+  <h1 class="hello-world">Hello, World!</h1>
+  <p>Hello Everyone,
+    My Name is Lucas, I am 19 years old and come from Washington DC. I am trying to learn to code though it is extremely
+    tedious and conceptually challenging. I find myself having an extremely difficult time coding and I want to do my
+    best.
+  </p>
+</body>
+
 </html>
