--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 <body>
   <h1 class="hello-world">Hello, World!</h1>
   <p>Hello Everyone,
-    My Name is Lucas, I am 19 years old and come from Washington DC. I am trying to learn to code though it is extremely
+    My Name is <em>Lucas,</em> I am 19 years old and come from <strong> Washington DC.</strong> I am trying to learn to
+    code though it is extremely
     tedious and conceptually challenging. I find myself having an extremely difficult time coding and I want to do my
     best.
   </p>
