--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head lang="en">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lukes HTML</title>
+    <title>Luke's HTML</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
   </head>
