--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class="hello-world">Hello, World!</h1>
+    <h1 class="a3s aiL">Hello, World!</h1>
   </body>
 </html>
