Link to hobbies.html page

--- a/public/Hobbies.html
+++ b/public/Hobbies.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML5>
+<html>
+  <head lang="en">
+    <meta charset="UTF-8" />
+    <title>Luke's Hobbies</title>
+    <ul>
+      <li><a href="tel:+7037760401">Giving out my phone number</a></li>
+      <li>I created a telegram group called InvestopediaLeaks I find a lot of thrill in communicatiing with the group and expanding what InvestopediaLeaks could be</li>
+      <li>Securing Instagram handles and web domains for InvestopediaLeaks in hopes Investopedia doesnt come after me too soon</li>
+      <li>Forgetting all my passwords and building folders on folders of my passwords</li>
+    </ul>
+</html>
