--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
   </head>
+  <title>Luke's Hobbies</title>
   <body>
-    <h1 class="a3s aiL">Hello, World!</h1>
+    <h1 class="hello-world">Hello, World!</h1>
+    <li>
+      <li>Trying to access why the stock market is fraud yet interesting in every corner</li>
+      <li><a href= "Hobbies.html">Creating href's to my hobbies</a></li>
+    </ul>
   </body>
 </html>
