--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
   </head>
   <title>Luke's Hobbies</title>
   <body>
-    <h1 class="hello-world">Hello, World!</h1>
+    <h1>Hello World</h1>
     <li>
+      <li><link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"></li>
       <li>Trying to access why the stock market is fraud yet interesting in every corner</li>
       <li><a href= "Hobbies.html">Creating href's to my hobbies</a></li>
     </ul>
